# Decay

./: .gitignore  CMakeLists.txt  Comparison Plots.nb  Comparison_Plots_step3B.nb  Correction Plots.nb  Correction_Plots_step3B.nb  Distributions.nb  Distributions_step3B.nb  Intro.nb  Intro_step3B.nb  LICENSE  PairFit.nb  PairFit_step3B.nb  Primordial Plots.nb  Primordial_Plots_step3B.nb  README.md  Ratios Plots.nb  Ratios_Plots_step3B.nb  Yield Test.nb  Yield_Test_step3B.nb  codex_repo_check.sh  run.sh
.github/workflows/: ci.yml
DeltaAnalysis/: CMakeLists.txt
DeltaAnalysis/apps/: compute_delta_decays.cpp  compute_total.cpp  compute_yields.cpp  plot_mt_distributions.cpp  plot_rapidity.cpp
DeltaAnalysis/data/: pionpmt.txt
DeltaAnalysis/gui/: mainwindow.cpp
DeltaAnalysis/include/: DecayFunctions.h  MathUtils.h
DeltaAnalysis/src/: DecayFunctions.cpp  RadialGrid.cpp  Thermodynamics.cpp
apps/: benchmark_performance.cpp  compare_models.cpp  compute_delta_decays.cpp  compute_primordial.cpp  compute_spectra.cpp  compute_total.cpp  compute_yields.cpp  compute_yields_refactored.cpp  export_publication_plots.cpp  plot_mt_distributions.cpp  plot_rapidity.cpp  test_decay_multiplicities.cpp
data/: DeltaMass_piPlus_p_0_10_Fig2_dNdM.txt  pionmY.txt  pionmmt.txt  pionpY.txt
docs/: PROFILING.md
gui/: main.cpp  mainwindow.cpp  mainwindow.h
include/: Constants.h  DecayFunctions.h  MathUtils.h  Plotting.h  RadialGrid.h  Thermodynamics.h
root3d/: .gitignore  CMakeLists.txt  README.md
root3d/apps/: delta3d_run.cpp  pairfit_run.cpp
root3d/include/Delta3D/: Config.h  PairFit.h  Physics.h
root3d/src/: PairFit.cpp  Physics.cpp
src/: DecayFunctions.cpp  MathUtils.cpp  Plotting.cpp  Thermodynamics.cpp
